feat: finish LGD and EAD model

--- a/code_backup/CreditRiskModeling-PDModel-WithComments-2.ipynb
+++ b/code_backup/CreditRiskModeling-PDModel-WithComments-2.ipynb
@@ -3629,7 +3629,8 @@
     "# We are going to remove some features, the coefficients for all or almost all of the dummy variables for which,\n",
     "# are not tatistically significant.\n",
     "\n",
-    "# We do that by specifying another list of dummy variables as reference categories, and a list of variables to remove.\n",
+    "# We do that by specifying another list of dummy variables as reference categories, \n",
+    "# and a list of variables to remove.\n",
     "# Then, we are going to drop the two datasets from the original list of dummy variables.\n",
     "\n",
     "# Variables\n",
@@ -4042,7 +4043,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -53230,6 +53233,27 @@
    "cell_type": "code",
    "execution_count": 153,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "breakpoint",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-153-cea0b2969840>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"breakpoint\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: breakpoint"
+     ]
+    }
+   ],
+   "source": [
+    "assert False, \"breakpoint\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "inputs_train_with_ref_cat.to_csv('inputs_train_with_ref_cat.csv')"
@@ -53237,7 +53261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
