--- a/code_my/PD_modeling.ipynb
+++ b/code_my/PD_modeling.ipynb
@@ -2823,7 +2823,7 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2840,6 +2840,23 @@
    "source": [
     "# 测试集上的ROC曲线下面积\n",
     "roc_auc_score(pred_test, targets_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*保存模型*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(log_reg3, open('pd_model.sav', 'wb'))"
    ]
   },
   {
